--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=9876
 PUBLIC_DIRECTORY_CACHE_TIME = 31557600000
 SESSION_MAX_AGE = 3600000
 SESSION_SECRET = tempSecret!23
+PRINTER_NAME = C3850
